<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chapter01</string>
    <string name="action_settings">Settings</string>
    <string name="app_title1">文字にHTMLのリンクを表示したい</string>
    <string name="app_title2">長い文字列を省略表示したい</string>
    <string name="app_title3">文字のスタイルを変更したい</string>
    <string name="app_title4">文字の配置を変更したい</string>
    <string name="app_title5">プログレスバーを使いたい</string>
    <string name="app_title6">プログレスバーをカスタマイズしたい</string>
    <string name="app_title7">ボタンを使いたい</string>
    <string name="app_title8">ボタンの状態に応じて画像を変えたい</string>
    <string name="app_title9">ボタンに画像をセットしたい</string>
    <string name="app_title10">トグル/スイッチを使いたい</string>
    <string name="app_title11">トグル/スイッチをカスタマイズしたい</string>
    <string name="app_title12">チェックボックスを使いたい</string>
    <string name="app_title13">ラジオボタンを使いたい</string>
    <string name="app_title14">シークバーを使いたい</string>
    <string name="app_title15">シークバーを縦に表示したい</string>
    <string name="app_title16">シークバーをカスタマイズしたい</string>
    <string name="app_title17">パスワードを入力したい</string>
    <string name="app_title18">入力ヒントを表示したい</string>
    <string name="app_title19">入力文字を制限したい</string>
    <string name="app_title20">入力サジェストを使いたい</string>
    <string name="app_title21">入力サジェストをカスタマイズしたい</string>
    <string name="app_title22">レーティングバーを使いたい</string>
    <string name="app_title23">スピナーを使いたい</string>
    <string name="app_title24">スピナーをカスタマイズしたい</string>
    <string name="app_title25">ズームコントロールを使いたい</string>
    <string name="app_title26">ズームの早さを変更したい</string>
    <string name="app_title27">デイトピッカーを使いたい</string>
    <string name="app_title28">デイトピッカーに初期値をセットしたい</string>
    <string name="app_title29">デイトピッカーの表示項目を制限したい</string>
    <string name="app_title30">デイトピッカーをダイアログで表示したい</string>
    <string name="app_title31">イメージビューで画像を表示したい</string>
    <string name="app_title32">イメージビューで画像を縮小して表示したい</string>
    <string name="app_title33">画面より大きい画像をスクロールしたい</string>
    <string name="app_title34">画像を回転させたい</string>
    <string name="app_title35">画像に額縁を設定したい</string>
    <string name="app_title36">画像読込中にローディングを設定したい</string>
    <string name="ch0110_toggle_shift">ToggleButton : %s</string>
    <string name="ch0110_switch_shift">Switch : %s</string>
    <string name="ch0126_label_zoomspeed">ズーム速度</string>
    <string name="ch0126_label_zoomspeedFast">早い</string>
    <string name="ch0126_label_zoomspeedSlow">遅い</string>
    <string name="ch0127_picker_getdate">日付を取得</string>
    <string name="ch0130_picker_datepickerdialog">デイトピッカーダイアログを表示</string>
    <string name="ch0129_picker_hidecalendar">カレンダーを非表示</string>
    <string name="ch0129_picker_hideyear">年を非表示</string>
    <string name="ch0129_picker_hidemonth">月を非表示</string>
    <string name="ch0129_picker_hideday">日を非表示</string>

</resources>