<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/Contents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" />

    <ZoomControls
        android:id="@+id/ZoomControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/ZoomSpeedSlow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/ch0126_label_zoomspeedSlow" />

    <Button
        android:id="@+id/ZoomSpeedFast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/ZoomSpeedSlow"
        android:text="@string/ch0126_label_zoomspeedFast" />

    <TextView
        android:id="@+id/LabelZoomSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ZoomSpeedSlow"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:text="@string/ch0126_label_zoomspeed" />

</RelativeLayout>